syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service Publisher {
    rpc Register (SimpleMessage) returns (SimpleMessage) {}
    rpc SendMessage (stream PublisherMessage) returns (SimpleMessage) {}
}

service Subscriber {
    rpc GetActiveTags (EmptyArg) returns (ListMessage) {}
    rpc SubscribeToTag (SimpleMessage) returns (stream SimpleMessage) {}
}

message EmptyArg {}

message SimpleMessage {
    string message = 1;
}

message ListMessage {
    repeated string list = 1;
}

message PublisherMessage {
    string id = 1;
    string message = 2;
}
